@@ -1,0 +1,1 @@
+    <%= @sticky.name %> <%= "#{SITE_URL}/stickies/#{@sticky.id}" %><% if @sticky.owner %>    Assigned To: <%= @sticky.owner.name %><% end %>    <% unless @sticky.due_date.blank? %>Due Date: <%= simple_date_and_weekday(@sticky.due_date) %><% end %>
