@@ -1,0 +1,8 @@
+<% @stickies.order(:due_date).group_by{|s| s.project_id}.each do |project_id, stickies| %>
+  <%= ((project = Project.find_by_id(project_id)) ? "#{project.name} #{SITE_URL}/projects/#{project.id}" : 'No Project') %>
+
+  <% stickies.each do |sticky| %>
+    <%= @sticky = sticky; render partial: 'sticky_line_item' %>
+  <% end %>
+
+<% end %>
