@@ -4,6 +4,7 @@
   * GUI updates for the Calendar
   * Grouped stickies can now be moved to a different project by editing the group
   * Templates can now have negative due date offsets
+  * Daily Stickies Due now groups the stickies by project
 
 * Bug Fix
   * Daily stickies due email fixed to include weekday for items past due
